--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <div >
-        <h1 class="titlebar">Image Galary</h1>
+        <h1 class="titlebar">Image Gallary</h1>
         <div class="container">
         <div>
             <img src="https://source.unsplash.com/random/200x200/?nature?1">
